# epicboxnodejs-source

./: .gitignore  README.md  app_mongo.js  default_config.json  docker-compose.yml  mongo-init.js  package.json
epicbox/: Dockerfile  Dockerfile.alt
epicboxlib_source/: Cargo.toml
epicboxlib_source/src/: main.rs
nginx/: nginx.conf  nginx.conf.template
